@@ -1,3 +1,13 @@
+2004-11-01  Kevin Decker  <kdecker@apple.com>
+
+        Reviewed by rjw.
+
+	fixed <rdar://problem/3681094> Crash in KJS::WindowFunc::tryCall with application/xhtml+xml Content-Type
+	once and for all. 
+
+        * khtml/ecma/kjs_window.cpp:
+        (WindowFunc::tryCall): Added a nil check in the case of an empty document lacking a baseURL().
+
 2004-11-01  Darin Adler  <darin@apple.com>
 
         Reviewed by Hyatt.
